--- a/web/index.html
+++ b/web/index.html
@@ -10,5 +10,6 @@
   <body id="body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
